# riot-middleware

./: Cargo.toml  Installer.iss  README.md
src/: exec.rs  main.rs  ports.rs
src/chat/: data.rs  handler.rs  mod.rs  modify.rs  server.rs  types.rs  utils.rs  xml.rs
src/client/: local.rs  mod.rs  redirector.rs  rewriter.rs  utils.rs
src/data/: data.rs  element.rs  friend.rs  handle.rs  mod.rs  presence.rs  session.rs
src/server/: data.rs  mod.rs  web.rs
src/update/: mod.rs
static/: cert.p12
