[package]
name = "riot_middleware"
version = "0.1.0"
edition = "2021"
default-run = "riot_middleware"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basic needs
anyhow = "1.0.75"
thiserror = "1.0.50"
once_cell = "1.18.0"
indexmap = "2.1.0"

# Async
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"

# HTTP
simple_proxy = { git = "https://github.com/FlowerAce/rs-simple-proxy.git", features = ["router"] }
hyper = { version = "0.14.27", features = ["full"] }
http = "0.2.1"
actix-web = "4.4.0"

# TLS
native-tls = "0.2"
tokio-native-tls = "0.3.1"

# Parsing
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
base64 = "0.21.5"
minidom = "0.15.2"

# Exec
ctrlc = "3.4.1"
wait-timeout = "0.2.0"


[[bin]]
name = "exec"
path = "src/exec.rs"
